--- a/content/appendix.tex
+++ b/content/appendix.tex
@@ -6,7 +6,7 @@
 \caption{Current-based LIF neuron parameters used for the converted CNN}
 \centering
 \label{cnnlifparam}
-\begin{tabular}{|ll|}
+\begin{tabularx}{0.65\textwidth}{|XX|}
 \hline
 Resting potential    		& -65 mV 		    \\
 Membrane Capacity    		& 1.0 nF 		     \\
@@ -15,14 +15,14 @@ Refractory period     		& 1.0 ms		                 \\
 Offset current    			& 0.0 nA		              \\
 Reset potential     		& -65.0 mV 	               \\
 Spike threshold     		& -50.0 mV          \\\hline
-\end{tabular}
+\end{tabularx}
 \end{table}
 
 \begin{table}[h!]
 \caption{Current-based LIF neuron parameters used for the converted DBN}
 \centering
 \label{cubalifparam}
-\begin{tabular}{|ll|}
+\begin{tabularx}{0.65\textwidth}{|XX|}
 \hline
 Resting potential    		& -65 mV 		    \\
 Membrane Capacity    		& 1.0 nF 		     \\
@@ -31,7 +31,7 @@ Refractory period     		& 10.0 ms		                 \\
 Offset current    			& 1.0 nA		              \\
 Reset potential     		& -53.0 mV 	               \\
 Spike threshold     		& -52.0 mV          \\\hline
-\end{tabular}
+\end{tabularx}
 \end{table}
 
 
@@ -39,7 +39,7 @@ Spike threshold     		& -52.0 mV          \\\hline
 \caption{Conductance-based LIF neuron parameters used for the converted DBN}
 \centering
 \label{cobalifparam}
-\begin{tabular}{|ll|}
+\begin{tabularx}{0.65\textwidth}{|XX|}
 \hline
 Resting potential    			& -65 mV 		    \\
 Membrane Capacity    			& 1.0 nF 		     \\
@@ -50,7 +50,7 @@ Reset potential     			& -53.0 mV 	               \\
 Spike threshold     			& -52.0 mV          \\
 Inhibitory reversal potential  & 90.0 mV	              \\
 Excitatory reversal potential  & -0.0 mV 	               \\\hline
-\end{tabular}
+\end{tabularx}
 \end{table}
    
 \pagebreak   
