--- a/content/concl.tex
+++ b/content/concl.tex
@@ -30,7 +30,7 @@ The STDP flag determining either completely positive or negative and dividing th
 
 Even so this system has many constrains, it might could be counted among one of the more biological plausible deep learning architectures \cite{bengio2015towards}.     
 
-\section{Future work} \label{c:future}
+\section{Future Work} \label{c:future}
 
 While this system shows promising results on small dataset, there is still a lot of space for improvement on the performance and biological plausibility level.
 
@@ -55,7 +55,7 @@ But due to the weights, which are implemented directly in hardware and the noisy
 \\
 While implementing a custom STDP rule on both neuromorphic devices could be quite challenging, applying already trained and converted spiking neuronal networks for a fast and energy efficient feature extraction should not pose any problems.  
 
-\subsection{Biological plausible learning} \label{c:biofuture}
+\subsection{Biologically Plausible Learning} \label{c:biofuture}
 
 Another direction which poses great potential for further research is tackling, the current restrictions on the biological plausibility.  
 
