--- a/content/exp.tex
+++ b/content/exp.tex
@@ -246,7 +246,7 @@ For a spiking network, in addition to modelling the $25$ input data and the $4$ 
 This number increases quadratically as the filter size is reduced or the number of filters is increased.
 
 Due to these constrains, the experiments primarily focus on smaller datasets and are not performed on current state-of-the-art image recognition datasets. 
-Specialized neuromorphic hardware, e.g. SpiNNaker or Spikey which are discussed in the "Future work" Chapter \ref{c:neuhard}, could speed up the computations and allow the evaluation of more complex datasets.  
+Specialized neuromorphic hardware, e.g. SpiNNaker or Spikey as discussed in the "Future Work" Chapter \ref{c:neuhard}, could speed up the computations and allow the evaluation of more complex datasets.  
 In addition most spiking neural network frameworks have, in contrast to most artificial neural network frameworks which are optimized for machine learning and speed, their main focus on a biological imitation and plausibility.
 
 
