--- a/content/backgrnd.tex
+++ b/content/backgrnd.tex
@@ -93,7 +93,7 @@ Thus, a Bayesian network can be seen as a tool to simplify and apply the Bayes r
 
 \subsection{Markov Random Fields} \label{c:markovnet}
 
-In contrast to Bayesian networks, Markov random fields are undirected graphical models, in which random variables are also represented by nodes, but edges in this case indicate conditional dependencies \cite{Goodfellow-et-al-2016-Book}\cite{murphy2012machine}.
+In contrast to Bayesian networks, Markov random fields (MRFs) are undirected graphical models, in which random variables are also represented by nodes, but edges in this case indicate conditional dependencies \cite{Goodfellow-et-al-2016-Book}\cite{murphy2012machine}.
 If two nodes $x_i$ and $x_j$ are connected by a edge, they are called each others neighbours.
 Given all of their neighbours, two nodes $x_k$ and $x_m$ are independent on each other.
 Thus, an MRF can be seen as a model of the joint probabilities of RVs (see Fig. \ref{fig:markovnet1}).
@@ -390,7 +390,7 @@ Thus the learning algorithm can be described as follows:
 
 \subsubsection{Mutlilayer-Perceptron} \label{c:mlp}
 
-While the perceptron models a single neuron, a multi-layer perceptron, consisting of stacked perceptrons, can be seen as an extension of the model to neural networks and thus overcomes the perceptrons disadvantage to only discriminate linearly \cite{rumelhart1985learning}\cite{Goodfellow-et-al-2016-Book}. 
+While the perceptron models a single neuron, a multilayer perceptron, consisting of stacked perceptrons, can be seen as an extension of the model to neural networks and thus overcomes the perceptrons disadvantage to only discriminate linearly \cite{rumelhart1985learning}\cite{Goodfellow-et-al-2016-Book}. 
 
 \begin{figure}
 	\centering
@@ -868,7 +868,7 @@ In Figure \ref{fig:cd} the sampling steps are visualized by unrolling the RBM as
 
 \paragraph{Persistent CD} \label{c:pcd}
 
-, proposed by Tieleman, does not initialize the Boltzmann machine each time a new sample is drawn, but uses the activations of previous runs instead \cite{tieleman2008training}. An intuition why it sometimes shows better performance could be that the previous activations are already closer to an energetic minimum, so that fewer step are required to get an good estimate of the model distribution. 
+Persistent CD (pCD), proposed by Tieleman, does not initialize the Boltzmann machine each time a new sample is drawn, but uses the activations of previous runs instead \cite{tieleman2008training}. An intuition why it sometimes shows better performance could be that the previous activations are already closer to an energetic minimum, so that fewer step are required to get an good estimate of the model distribution. 
 
 
 \subsubsection{Deep Belief Networks} \label{c:dbns}
