--- a/content/impl.tex
+++ b/content/impl.tex
@@ -101,7 +101,7 @@ with the size of the label layer being, due to the one-hot encoding of the label
 \section{eCD} \label{c:ecdimpl}
 
 The eCD learning was implemented in PyNN with Nest with shared synaptic weights and shared continuous STDP weight updates as well as in the Brian simulator with individual STDP weight updates and weight synchronization at discrete timesteps \cite{10.3389/neuro.11.011.2008}\cite{Gewaltig:NEST}\cite{10.3389/neuro.11.005.2008}. 
-As shown in \ref{fig:ecdnest} due to self-facilitation leading to a weight "explosion" when using convolutional shared weight updates, we chose Brian for most of our experiments.
+As shown in \ref{fig:ecdnestconv} due to self-facilitation leading to a weight "explosion" when using convolutional shared weight updates, we chose Brian for most of our experiments.
 
 As neuron type LIF neurons with high frequency input noise were chosen.
 Each input element $x_i \in \textbf{x}$ of a data sample $\textbf{x}$ gets transformed to Poisson distributed spikes train, with the rate $\lambda$ proportional to the input value $\lambda \propto x_i$. 
@@ -152,7 +152,7 @@ The original input data is still fed to the bottom RBM while the activations of 
 
 
 At test time the network is run for a fixed timespan $t_{test}$ with the test data fed to the bottom RBM.
-There is no external input forwarded the label layer while the number of spikes in the label are counted.
+There is no external input forwarded to the label layer while the number of spikes in the label neurons are counted.
 The neuron with the most spikes represents the predicted label.  
 
  
