--- a/content/soa.tex
+++ b/content/soa.tex
@@ -241,7 +241,7 @@ In addition before applying the final weights, Diehl et al use some model- and d
 	\label{fig:csnnconv}
 \end{figure}
 
-\section{eCD and Sampling Machines} \label{c:ecd}
+\section{Event-Driven CD} \label{c:ecd}
 
 Different approaches have been proposed to train a rate-based or spiking RBM, of which the first was probably by Hinton.
 They use multiple identical binary stochastic input units for the each element in a data sample to approximate a rate based input \cite{Teh2005}.
@@ -269,9 +269,9 @@ The symmetric learning rule for two neurons, given their spike train $v_i(t)$ an
 with the learning rule $\mu$, the global STDP status flag $g(t)$ determining the positive and negative phase of the CD algorithm and the $STDP(v, h)$ parametrized to implement a symmetric weight change dependent in the neural activity:
 \[
 \begin{split}
-STDP(v_i(t), h_j(t)) = v_i(t) A_{h_j}(t) + h_j(t) A_{v_i}(t), \\
-A_{h_j}(t) = A \int_{- \infty}^t W(t-s) h_j(s) ds, \\ 
-A_{v_i}(t) = A \int_{- \infty}^t W(t-s) v_i(s) ds. \\ 
+STDP(v_i(t), h_j(t)) &= v_i(t) A_{h_j}(t) + h_j(t) A_{v_i}(t), \\
+A_{h_j}(t) &= A \int_{- \infty}^t W(t-s) h_j(s) ds, \\ 
+A_{v_i}(t) &= A \int_{- \infty}^t W(t-s) v_i(s) ds. \\ 
 \end{split}
 \]
 In this STDP rule $A(t)$ can be seen as an activity trace indicating recent activity and $v_i(t)$ , $h_j(t)$ as a control variable enabling weight changes given a spike at time $t$.    
